--- a/APBD_Zadanie_6/appsettings.json
+++ b/APBD_Zadanie_6/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Database": "Data Source=db-mssql16;Initial Catalog=sXXXXX;Integrated Security=True"
+  }
 }
